[gd_scene load_steps=4 format=2]

[ext_resource path="res://networking/CustomHTTPRequest.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/WorldMap.gd" type="Script" id=3]

[node name="WorldMap" type="PanelContainer"]
margin_top = 119.0
margin_bottom = 119.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="GetWorldMap" parent="." instance=ExtResource( 1 )]

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 435.0
margin_bottom = 353.0
rect_min_size = Vector2( 400, 0 )

[node name="Label" type="Label" parent="VBox"]
margin_right = 428.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.329412, 0.239216, 0.0666667, 1 )
text = "World Map"

[node name="WorldLoadedInfo" type="HBoxContainer" parent="VBox"]
margin_top = 28.0
margin_right = 428.0
margin_bottom = 48.0

[node name="PercentExplored" type="Label" parent="VBox/WorldLoadedInfo"]
margin_right = 9.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 549, 97 )
custom_colors/font_color = Color( 0.505882, 0.356863, 0.309804, 1 )
text = "..."

[node name="PercentLoaded" type="Label" parent="VBox/WorldLoadedInfo"]
margin_left = 13.0
margin_right = 22.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 536, 97 )
custom_colors/font_color = Color( 0.505882, 0.356863, 0.309804, 1 )
text = "..."

[node name="HBoxContainer" type="GridContainer" parent="VBox"]
margin_top = 56.0
margin_right = 428.0
margin_bottom = 138.0
columns = 3

[node name="ShowHeatCheckBox" type="CheckBox" parent="VBox/HBoxContainer"]
margin_right = 136.0
margin_bottom = 39.0
text = "Show Heat"

[node name="ShowFertilityCheckBox" type="CheckBox" parent="VBox/HBoxContainer"]
margin_left = 140.0
margin_right = 304.0
margin_bottom = 39.0
text = "Show Soil Fertility"

[node name="ShowHeightCheckBox" type="CheckBox" parent="VBox/HBoxContainer"]
margin_left = 308.0
margin_right = 428.0
margin_bottom = 39.0
pressed = true
text = "Show Height"

[node name="ShowMoistureCheckBox" type="CheckBox" parent="VBox/HBoxContainer"]
margin_top = 43.0
margin_right = 136.0
margin_bottom = 82.0
pressed = true
text = "Show Moisture"

[node name="WorldMapSprite" type="TextureRect" parent="VBox"]
margin_top = 146.0
margin_right = 428.0
margin_bottom = 346.0
rect_min_size = Vector2( 400, 200 )
expand = true
stretch_mode = 7

[node name="PosLabels" type="HBoxContainer" parent="VBox/WorldMapSprite"]
margin_top = -2.0
margin_right = 400.0
margin_bottom = 18.0

[node name="North" type="Label" parent="VBox/WorldMapSprite/PosLabels"]
margin_right = 90.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 0 )
custom_colors/font_color = Color( 1, 0.964706, 0.894118, 1 )

[node name="East" type="Label" parent="VBox/WorldMapSprite/PosLabels"]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 20.0
rect_min_size = Vector2( 90, 0 )
custom_colors/font_color = Color( 1, 0.964706, 0.894118, 1 )

[connection signal="request_completed" from="GetWorldMap" to="." method="_on_GetWorldMap_request_completed"]
[connection signal="toggled" from="VBox/HBoxContainer/ShowHeatCheckBox" to="." method="_on_ShowHeatCheckBox_toggled"]
[connection signal="toggled" from="VBox/HBoxContainer/ShowFertilityCheckBox" to="." method="_on_ShowFertilityCheckBox_toggled"]
[connection signal="toggled" from="VBox/HBoxContainer/ShowHeightCheckBox" to="." method="_on_ShowHeightCheckBox_toggled"]
[connection signal="toggled" from="VBox/HBoxContainer/ShowMoistureCheckBox" to="." method="_on_ShowHeightCheckBox2_toggled"]
